Fixing color issue open/collapsed

--- a/font.css
+++ b/font.css
@@ -94,7 +94,7 @@ strong{
 	width: 100%;
 }
 
-.sidebar-nav ul:not(.app-sub-sidebar)>li.collapse::before{
+.sidebar-nav ul:not(.app-sub-sidebar)>li.open::before{
 	border-color: var(--theme-color);
 }
 
@@ -125,6 +125,9 @@ strong{
 .sidebar-nav li>a[href^="/"]:not([href*="?id="]):only-child, .sidebar-nav li>a[href^="#/"]:not([href*="?id="]):only-child{
 	background-image: none;
 }
+.sidebar-nav li>a[href^="/"]:not([href*="?id="]):not(:only-child), .sidebar-nav li>a[href^="#/"]:not([href*="?id="]):not(:only-child){
+	background-image: none;
+}
 
 li.open > ul > li.file > a {
 	background-image: none!important;
@@ -136,13 +139,13 @@ li.open > ul > li.file > a {
 
 li.open > ul > li.file.active > a {
     background-color: var(--base-background-color);
-    border-width: 0 0 0 1px;
+    border-width: 1px 0 1px 0;
 }
 
 li.open > ul > li.file > a:hover {
     background-color: var(--base-background-color);
     text-decoration: none;
-    border-width: 0 0 0 1px;
+    border-width: 0 0 0 0;
 }
 
 .app-sub-sidebar li.active > a {
@@ -151,11 +154,16 @@ li.open > ul > li.file > a:hover {
     border-color: var(--mono-tint2);
 }
 
+
 .sidebar-nav li > a:hover {
     background-color: var(--base-background-color);
     text-decoration: none;
 }
 
+.sidebar-nav li.active>a, .sidebar-nav li.collapse>a {
+	border: none;
+	color: inherit;
+}
 .sidebar-nav li.active > a {
 	border-bottom: 1px solid var(--mono-tint2);
 }
